fixed topic styling on tablet view

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -256,6 +256,17 @@ ul.topNavigation {
   width: 100%;
 }
 
+.topicTag {
+  align-self: flex-end;
+  background-color: rgba(226, 53, 230,.7);
+  color: white;
+  padding: 1%;
+  position: relative;
+  top: 50px;
+  width: 25%;
+  z-index: 300;
+}
+
 .tagsContainer p {
   text-align: center;
 }
@@ -390,11 +401,14 @@ ul.topNavigation {
   .blog-post-wrapper {
     display: flex;
     flex-wrap: wrap;
+    margin: 2% 0 0 0;
     justify-content: space-around;
   }
 
   .container {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    justify-content: space-between;
+    margin: 1% 0;
     transition: 0.3s;
     width: 47%;
   }
@@ -414,6 +428,17 @@ ul.topNavigation {
     border-bottom: 2px solid black;
     margin: 0 0 5% 0;
     width: 15%;
+  }
+
+  .topicTag {
+    align-self: flex-end;
+    background-color: rgba(226, 53, 230,.7);
+    color: white;
+    padding: 1%;
+    position: relative;
+    top: 50px;
+    width: 25%;
+    z-index: 300;
   }
 
   .blogEntryTitle {
